--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,14 @@
-
+@import url("https://fonts.googleapis.com/css2?family=Prompt:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500;600&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    @apply leading-[normal] m-0;
+  }
+  *,
+  ::before,
+  ::after {
+    border-width: 0;
+  }
